--- a/public/dpm.html
+++ b/public/dpm.html
@@ -163,6 +163,10 @@
         </div>
     </div>
 </div>
-</div>
+<script type="text/javascript" src="/assets/lib/jquery/jquery-1.11.3.min.js"></script>
+<script type="text/javascript" src="/assets/dapingmu/js/msgWall.js"></script>
+<script type="text/javascript">
+    MW.start();
+</script>
 </body>
 </html>
