--- a/public/weixindapingmu.html
+++ b/public/weixindapingmu.html
@@ -28,17 +28,17 @@
 
                 </a>
             </div>
-            <ul class="wrap-list">
-                <li>微信大屏幕官方演示页面<br>点击下方对应功能按钮可查看功能演示</li>
+            <ul class="notice-list clearfix">
+                <li class="active">微信大屏幕官方演示页面<br>点击下方对应功能按钮可查看功能演示</li>
 
-                <li>微信号：hudongdapingmu<br/>关注后发送内容即可上墙</li>
+                <li>微信号：netxinyi<br/>关注后发送内容即可上墙</li>
 
 
                 <li>编辑短信内容#微信墙#+您想说的话 <br>到 1069-0133-0101-1350 即可上墙</li>
 
             </ul>
             <div class="qrcode">
-                <img src="http://s8.wxscreen.com/static/upload/slave2_store2/2014/01/03/20140103185421000000_1_50479_7439.png">
+                <img src="/assets/dapingmu/img/qrcode.jpg">
 
             </div>
         </div>
@@ -59,14 +59,16 @@
 
             <!--滚动公告-->
             <div class="notice">
-                <div id="wordScroll" class="word-scroll2">
-                    <ul class="wb-list clearfix" style="width: 10000px;">
+                <div class="notice-wrap">
+                    <ul class="notice-list clearfix">
                         <li>这里可以填写活动现场的公告之类的，比如找人，临时通知等等。</li>
                         <li>可以发多条公告的哦~~~~</li>
                         <li>这里可以填写活动现场的公告之类的，比如找人，临时通知等等。</li>
                         <li>可以发多条公告的哦~~~~</li>
                     </ul>
+
                 </div>
+
             </div>
             <!--滚动公告结束-->
 
@@ -123,6 +125,7 @@
     </div>
 </div>
 <script type="text/javascript" src="/assets/lib/jquery/jquery-1.11.3.min.js"></script>
+<script type="text/javascript" src="/assets/lib/jquery-scroll-marquee/scroll-marquee.js"></script>
 <script type="text/javascript" src="/assets/dapingmu/js/msgWall.js"></script>
 <script type="text/javascript">
     MW.start();
