--- a/public/weixindapingmu.html
+++ b/public/weixindapingmu.html
@@ -46,6 +46,26 @@
                 <ul class="message-list">
 
                 </ul>
+                <div class="content-detail">
+                    <div class="detail-list">
+                        <div class="content-detail-item">
+                            <div class="detail-header">
+                                <div class="user-avatar">
+                                    <img src="http://wx.qlogo.cn/mmopen/ajNVdqHZLLC11iaTPfGbdHUicPBALG3IWicILXibyrkGQnyib6CvicxpSApR6m4WwYOwhNwicb8pI3KvCUAm9K6djum5A/0"
+                                         width="90" height="90" alt="">
+                                </div>
+                                <div class="user-info">
+                                    <span class="user-name">迁迁</span>
+                                    <span>来自微信</span>
+                                </div>
+                            </div>
+                            <div class="detail-content">
+                                详细内容
+                            </div>
+                        </div>
+                    </div>
+                    <a href="javascript:void(0);" class="close" style=""></a>
+                </div>
             </div>
 
         </div>
